2007-12-20  Tobias Burnus  <burnus@net-b.de>

PR fortran/34530
        * io/list_read.c (eat_line): Move up in the file.
        (eat_separator): In namelist mode, skip over comment lines.

2007-12-20  Tobias Burnus  <burnus@net-b.de>

        PR fortran/34530
        * gfortran.dg/namelist_44.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@131099 138bc75d-0d04-0410-961f-82ee72b054a4